--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -28,6 +28,29 @@
     }
   }
 
+  .currentEpisode {
+    text-align: center;
+  
+    img {
+      border-radius: 1.5rem;
+    }
+  
+    strong {
+      display: block;
+      margin-top: 2rem;
+      font: 600 1.25rem Lexand, sans-serif;
+      line-height: 1.75rem;
+    }
+  
+    span {
+      display: block;
+      margin-top: 1rem;
+      opacity: 0.6;
+      line-height: 1.5rem;
+    }
+  }
+  
+
 .emptyPlayer{
     width: 100%;
     height: 20rem;
@@ -82,6 +105,17 @@
         background: transparent;
         border: 0;
         font-size: 0;
+
+        transition: filter 0.2s;
+
+        &:disabled{
+          cursor: default;
+        }
+
+        &:hover:not(:disabled){
+          filter: brightness(0.7);
+        }
+
     }
 
     &.playButton {
@@ -89,6 +123,11 @@
         height: 4rem;
         border-radius: 1rem;
         background: var(--purple-400);
+
+        &:hover:not(:disabled){
+          filter: brightness(0.95);
+        }
+
     }
 }
 
